[package]
authors = ["Alan Ryan <alan.ryan@gmail.com>"]
edition = "2018"
name = "pi_drive_sync"
version = "0.1.0"
[dependencies]
google-drive3 = "*"
hyper = "^0.10"
hyper-rustls = "^0.6"
notify = "4.0.15"
serde = "^1.0"
serde_json = "^1.0"
tempfile = "3.1.0"
yup-oauth2 = "^1.0"
clap = "2.33.1"
slog = "2.5.2"
lazy_static = "1.4.0"
md5 = "0.7.0"
