[package]
authors = ["Alan Ryan <alan.ryan@gmail.com>"]
edition = "2018"
name = "pi_drive_sync"
version = "0.1.0"
[dependencies]
google-drive3 = "1.0.14"
hyper = "^0.10"
hyper-rustls = "^0.6"
notify = "4.0.15"
serde = "^1.0"
serde_json = "^1.0"
tempfile = "3.1.0"
yup-oauth2 = "^1.0"
clap = "2.33.1"
slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_trace"] } 
lazy_static = "1.4.0"
base64 = "0.12.3"
slog-async = "2.5.0"
slog-term = "2.6.0"
derive-new = "0.5.8"
hyper-tls = "0.4.3"
